fixed dev spacing for text

--- a/src/App.css
+++ b/src/App.css
@@ -477,7 +477,7 @@ html {
 }
 
 .dev-card-text {
-  margin-left: 30px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
